<resources>
    <string name="app_name">RollerBall</string>
    <string name="Start" />
    <string name="gameStart">Start</string>
    <string name="level1">1</string>
    <string name="level2">2</string>
    <string name="level3">3</string>
    <string name="level4">4</string>
    <string name="level5">5</string>
    <string name="level6">6</string>
    <string name="level7">7</string>
    <string name="level8">8</string>
    <string name="level9">9</string>
    <string name="level10">10</string>
    <string name="level11">11</string>
    <string name="level12">12</string>
    <string name="retry">Retry</string>
    <string name="next">Next</string>
    <string name="back">back</string>
    <string name="score">Leaderboard</string>
</resources>
