<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="iut63.iut.rollerball.choiceLevel"
    android:id="@+id/tableLayout">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/level1"
            android:id="@+id/button111"
            android:layout_column="0" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/level2"
            android:id="@+id/button2"
            android:layout_column="1" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/level3"
            android:id="@+id/button3"
            android:layout_column="2" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/level4"
            android:id="@+id/button4"
            android:layout_column="3" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/level5"
            android:id="@+id/button9"
            android:layout_column="0" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/level6"
            android:id="@+id/button10"
            android:layout_column="0" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/level7"
            android:id="@+id/button5"
            android:layout_column="0" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/level8"
            android:id="@+id/button8"
            android:layout_column="1" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/level9"
            android:id="@+id/button7"
            android:layout_column="2" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/level10"
            android:id="@+id/button6"
            android:layout_column="3" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/level11"
            android:id="@+id/button11"
            android:layout_column="0" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/level12"
            android:id="@+id/button12"
            android:layout_column="0" />
    </TableRow>
</TableLayout>
