<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iut63.iut.rollerball.MainActivity"
    android:id="@+id/relativeLayoutRoot">


    <SurfaceView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/surfaceView"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center" >
    </SurfaceView>

    <Button
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:id="@+id/retry"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:textSize="@dimen/retryValue"
        android:textColor="#502424"
        android:visibility="invisible"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/next"
        android:textSize="@dimen/retryValue"
        android:layout_gravity="right|center_vertical"
        android:background="@android:color/transparent"
        android:textColor="#502424"
        android:visibility="invisible"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back"
        android:layout_gravity="left|center_vertical"
        android:textSize="@dimen/retryValue"
        android:background="@android:color/transparent"
        android:textColor="#502424"
        android:visibility="invisible"
        android:textStyle="bold" />

</FrameLayout>
